[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/splash/back2.png" type="Texture" id=1]
[ext_resource path="res://assets/art/splash/back.png" type="Texture" id=2]
[ext_resource path="res://assets/art/splash/scores.png" type="Texture" id=3]
[ext_resource path="res://scripts/Splash.gd" type="Script" id=4]

[node name="Credits" type="Node2D"]
script = ExtResource( 4 )

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 251.683
margin_top = 403.182
margin_right = 791.683
margin_bottom = 583.182
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scores" type="Sprite" parent="."]
position = Vector2( 525.195, 148.94 )
texture = ExtResource( 3 )
[connection signal="button_down" from="BackButton" to="." method="_on_BackButton_button_down"]
